add note to creating metadata packs

--- a/Metadata Management/Creating Metadata Packs.ipynb
+++ b/Metadata Management/Creating Metadata Packs.ipynb
@@ -61,7 +61,7 @@
     "energy_datasets = np.where(topics_of_data == pack_topic)\n",
     "energy_dataset_uniq_ids = [july_data_upload.index[ix] for ix in energy_datasets][0]\n",
     "\n",
-    "# Issu\n",
+    "# Issue = if metadata isn't written for some, this may throw an error\n",
     "already_written_energy_metadata = metadata_for_upload.loc[energy_dataset_uniq_ids]\n",
     "total_energy_datasets_identified = july_data_upload.loc[energy_dataset_uniq_ids]"
    ]
