bring ene.015, ene.018, cit.017 up to date with current processing, reupload to GEE

--- a/Raster Dataset Processing/Raster Prep Notebooks/ene.015_done.ipynb
+++ b/Raster Dataset Processing/Raster Prep Notebooks/ene.015_done.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -65,9 +65,9 @@
     "s3_download = boto3.resource(\"s3\")\n",
     "\n",
     "s3_bucket = \"wri-public-data\"\n",
-    "s3_folder = \"resourcewatch/raster/*\"\n",
+    "s3_folder = \"resourcewatch/raster/ene_015_solar_energy_potential/\"\n",
     "\n",
-    "s3_file = \"*.tif\"\n",
+    "s3_file = \"ene_015_solar_energy_potential.tif\"\n",
     "\n",
     "s3_key_orig = s3_folder + s3_file\n",
     "s3_key_edit = s3_key_orig[0:-4] + \"_edit.tif\"\n",
@@ -96,50 +96,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Potentially useful for online directories"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# View files in a ftp, see cli.015\n",
-    "remote_path = \"ftp://cidportal.jrc.ec.europa.eu/jrc-opendata/EDGAR/datasets/v431_v2\"\n",
-    "remote_path_BC = remote_path + \"/BC/TOTALS/\"\n",
-    "file = req.urlopen(remote_path_BC).read().splitlines()\n",
-    "\n",
-    "# Copy from https or ftp\n",
-    "with(closing(urlopen(online_folder + most_recent))) as r:\n",
-    "    with(open(local_orig, 'wb')) as f:\n",
-    "        shutil.copyfileobj(r, f)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Define local file locations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "local_folder = \"/Users/nathansuberi/Desktop/RW_Data/Rasters/*\"\n",
-    "file_name = \"*\"]\n",
+    "local_orig = \"./temp.tif\"\n",
     "\n",
-    "local_orig = local_folder + file_name\n",
+    "s3_download.meta.client.download_file(s3_bucket, s3_key_orig, local_orig)\n",
     "\n",
-    "orig_extension_length = 4 #4 for each char in .tif\n",
-    "local_edit = local_orig[:-orig_extension_length] + \"edit.tif\" "
+    "local_edit = \"./temp_edit.tif\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "with rio.open(local_orig) as src:\n",
+    "    print(src.profile)"
    ]
   },
   {
@@ -151,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -179,13 +163,13 @@
     "    west_lon = -180\n",
     "    east_lon = 180\n",
     "    \n",
-    "    transform = rasterio.transform.from_bounds(west_lon, south_lat, east_lon, north_lat, columns, rows)\n",
+    "    transform = rio.transform.from_bounds(west_lon, south_lat, east_lon, north_lat, columns, rows)\n",
     "    \n",
     "    # Profile\n",
     "    \n",
-    "    no_data_val = *\n",
+    "    no_data_val = -9999\n",
     "    target_projection = 'EPSG:4326'\n",
-    "    target_data_type = np.float64\n",
+    "    target_data_type = np.float32\n",
     "    \n",
     "    profile = {\n",
     "        'driver':'GTiff', \n",
@@ -212,19 +196,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# Original\n",
-    "s3_upload.upload_file(local_orig, s3_bucket, s3_key_orig,\n",
-    "                         Callback=ProgressPercentage(local_orig))\n",
+    "# s3_upload.upload_file(local_orig, s3_bucket, s3_key_orig,\n",
+    "#                          Callback=ProgressPercentage(local_orig))\n",
     "\n",
     "# Edit\n",
     "s3_upload.upload_file(local_edit, s3_bucket, s3_key_edit,\n",
     "                         Callback=ProgressPercentage(local_edit))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "os.remove(local_orig)\n",
+    "os.remove(local_edit)"
    ]
   }
  ],
