adjust GHG GDP world bank data

--- a/Raster Dataset Processing/Raster Prep Notebooks/foo.005 (update metadata - matches with area, production, and yield, need to update crops and technologies).ipynb
+++ b/Raster Dataset Processing/Raster Prep Notebooks/foo.005 (update metadata - matches with area, production, and yield, need to update crops and technologies).ipynb
@@ -2,50 +2,58 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
-    "Current Floods\tdis.005\thttp://www.gdacs.org/flooddetection/overview.aspx"
+    "Crop Areas and Yields\tfoo.005\thttp://mapspam.info"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "dis.005 http://www.gdacs.org/flooddetection/overview.aspx\n",
-    "SRC: http://www.gdacs.org/flooddetection/DATA/ALL/\n",
-    "Time period: 2002 - now\n",
-    "File type: Tif\n",
-    "Notes: \n",
-    "Includes its own API: http://www.gdacs.org/flooddetection/Download/Technical_Note_GFDS_Data_Products_v1.pdf\n",
-    "Several parts of their API have been deprecated, i.e. finding nearby population, river, cities, slope, agricultural and urban land use. Probably because of lack of updated data. We can re-implement this.\n",
-    "Ask Perry about how the avg/sd deviations are calculated - same place throughout a year? This seems most likely. We want to know where the water is away from overall average, not \"how extreme\" the event is compared to the past on that day.\n",
+    "foo.005 http://mapspam.info\n",
+    "SRC: https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/DHXBJX\n",
     "\n",
-    "SpecialTiffs\n",
-    "- oceanmask.tif\n",
-    "- dma_global, dma_global_WGS84_v2, and dma_global_WGS84_Shift_v2 tifs\n",
+    "Highlight difference between area, production and yield... yield is a rate, production is a total. All three are important.\n",
     "\n",
-    "4 day average tifs (single sensor)\n",
+    "4 datasets for 4 crops, 6 layers per Crop (Wheat, Rice, Soybean, Maize)\n",
+    "- Irrigated\n",
+    "-- harv area\n",
+    "-- production\n",
+    "-- yield\n",
+    "- Rainfed\n",
+    "-- harv area\n",
+    "-- production\n",
+    "-- yield\n",
     "\n",
-    "AvgSourceTiffs (Tm)\n",
-    "- brightness temperature of last measurement for this pixel (unit: K)\n",
-    "AvgCalibrationTiffs (Tc)\n",
-    "- brightness temperature of last calibration pixel\n",
-    "AvgPositionTiffs (P)\n",
-    "- relative position of calibration pixel\n",
+    "OR 2 datasets for Irrigated / Rainfed technologies, 3 layers per crop for 12 layers (harv area wheat, production wheat, yield wheat, etc)\n",
     "\n",
-    "Merged 4 day tifs (all sensors)\n",
-    "- each pixel calculated based on the most available samples from any satellite in the constellation\n",
+    "OR 3 datasets for Harvested Area / Production / Yield statistics, 2 layers per crop for 8 layers (irrigated wheat, rainfed wheat, etc)\n",
     "\n",
-    "AvgSignalTiffs (s = Tm/Tc)\n",
-    "- average flood signal\n",
-    "AvgMagTiffs (unit: # of sd from mean)\n",
-    "- average flood magnitude\n",
-    "* Average and standard deviation are calculated using the entire time series\n",
+    "<u>Available files</u>\n",
+    "* cell5m_allockey_xy.csv\n",
+    "primary key for cell grid, xy centroid\n",
+    "* <b>spam2005V3r1_global_harv_area.geotiff.zip</b>\n",
+    "* spam2005V3r1_global_phys_area.geotiff.zip\n",
+    "* <b>spam2005V3r1_global_prod.geotiff.zip</b>\n",
+    "* spam2005V3r1_global_val_prod_agg.geotiff.zip\n",
+    "* * includes measures of value of food crops vs. non-food crops\n",
+    "* <b>spam2005V3r1_global_yield.geotiff.zip</b>\n",
     "\n",
+    "<u>Crops (for now, all food crops)</u>\n",
+    "* wheat (whea)\n",
+    "* rice (rice)\n",
+    "* maize (maiz)\n",
+    "* soybean (soyb)\n",
     "\n",
-    "*** difference between GDFS and UMD Global Flood Monitoring System (GFMS) https://pmm.nasa.gov/TRMM/flood-and-landslide-monitoring\n",
+    "<u>Technologies</u>\n",
+    "* A (all technologies)\n",
+    "* H (rainfed high inputs)\n",
+    "* I (irrigated high inputs)\n",
+    "* L (rainfed low inputs)\n",
+    "* R (all rainfed technologies)\n",
+    "* S (rainfed subsistence)\n",
+    "\n",
     "\n"
    ]
   },
