--- a/Raster Dataset Processing/Raster Prep Notebooks/dis.005 (update metadata - including AvgMagTiffs, mag calculated using avg and std dev from 2002 - 2008).ipynb
+++ b/Raster Dataset Processing/Raster Prep Notebooks/dis.005 (update metadata - including AvgMagTiffs, mag calculated using avg and std dev from 2002 - 2008).ipynb
@@ -2,27 +2,63 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "source": [
-    "Crop Areas and Yields\tfoo.005\thttp://mapspam.info"
+    "Current Floods\tdis.005\thttp://www.gdacs.org/flooddetection/overview.aspx"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "foo.005 http://mapspam.info\n",
-    "SRC: https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/DHXBJX\n",
-    "Downloaded to RW_Data/Rasters/\n",
-    "File type: tif, csv\n",
+    "dis.005 http://www.gdacs.org/flooddetection/overview.aspx\n",
+    "SRC: http://www.gdacs.org/flooddetection/DATA/ALL/\n",
+    "Time period: 2002 - now\n",
+    "File type: Tif\n",
+    "Notes: \n",
+    "Includes its own API: http://www.gdacs.org/flooddetection/Download/Technical_Note_GFDS_Data_Products_v1.pdf\n",
     "\n",
-    "* cell5m_allockey_xy.csv\n",
-    "primary key for cell grid, xy centroid\n",
-    "* spam2005V3r1_global_harv_area.geotiff.zip\n",
-    "* spam2005V3r1_global_phys_area.geotiff.zip\n",
-    "* spam2005V3r1_global_prod.geotiff.zip\n",
-    "* spam2005V3r1_global_val_prod_agg.geotiff.zip\n",
-    "* spam2005V3r1_global_yield.geotiff.zip"
+    "Chosen data SRC: http://www.gdacs.org/flooddetection/DATA/ALL/AvgMagTiffs/2017/09/\n",
+    "\n",
+    "Several parts of their API have been deprecated, i.e. finding nearby population, river, cities, slope, agricultural and urban land use. Probably because of lack of updated data. We can re-implement this.\n",
+    "\n",
+    "SpecialTiffs\n",
+    "- oceanmask.tif\n",
+    "- dma_global, dma_global_WGS84_v2, and dma_global_WGS84_Shift_v2 tifs\n",
+    "\n",
+    "4 day average tifs (single sensor)\n",
+    "\n",
+    "AvgSourceTiffs (Tm)\n",
+    "- brightness temperature of last measurement for this pixel (unit: K)\n",
+    "AvgCalibrationTiffs (Tc)\n",
+    "- brightness temperature of last calibration pixel\n",
+    "AvgPositionTiffs (P)\n",
+    "- relative position of calibration pixel\n",
+    "\n",
+    "Merged 4 day tifs (all sensors)\n",
+    "- each pixel calculated based on the most available samples from any satellite in the constellation\n",
+    "\n",
+    "AvgSignalTiffs (s = Tm/Tc)\n",
+    "- average flood signal\n",
+    "\n",
+    "<b>AvgMagTiffs (unit: # of sd from mean)</b>\n",
+    "- average flood magnitude\n",
+    "* Average and standard deviation are calculated using the entire time series ((( OR just from 2002 - 2008??? )))\n",
+    "\n",
+    "\n",
+    "*** difference between GDFS and UMD Global Flood Monitoring System (GFMS) https://pmm.nasa.gov/TRMM/flood-and-landslide-monitoring\n",
+    "\n",
+    "\n",
+    "ALSO, metadata mentions time series of anomaly events at 11,000 locations of interest.\n",
+    "** Refer users to the GFDS website for these\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "NOW looking @ MagPng files\n"
    ]
   },
   {
@@ -34,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -62,6 +98,37 @@
     "import threading\n",
     "import sys\n",
     "from glob import glob"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'driver': 'PNG', 'dtype': 'uint8', 'nodata': None, 'width': 4000, 'height': 2000, 'count': 4, 'crs': CRS({}), 'transform': (0.0, 1.0, 0.0, 0.0, 0.0, 1.0), 'affine': Affine(1.0, 0.0, 0.0,\n",
+      "       0.0, 1.0, 0.0), 'tiled': False, 'interleave': 'pixel'}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/nathansuberi/.pyenv/versions/3.6.0/lib/python3.6/site-packages/rasterio/__init__.py:193: UserWarning: Dataset has no geotransform set.  Default transform will be applied (Affine.identity())\n",
+      "  s.start()\n"
+     ]
+    }
+   ],
+   "source": [
+    "local_loc = \"/Users/nathansuberi/Desktop/RW_Data/signal_4days_20170928.png\"\n",
+    "\n",
+    "with rio.open(local_loc, 'r') as src:\n",
+    "    print(src.profile)"
    ]
   },
   {
