--- a/Metadata Management/Upload Metadata to API.ipynb
+++ b/Metadata Management/Upload Metadata to API.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -32,10 +32,10 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 92042    0 92042    0     0   109k      0 --:--:-- --:--:-- --:--:--  108k\n",
+      "100 92288    0 92288    0     0  15689      0 --:--:--  0:00:05 --:--:-- 15687\n",
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100  577k    0  577k    0     0   913k      0 --:--:-- --:--:-- --:--:--  912k\n"
+      "100  577k    0  577k    0     0   251k      0 --:--:--  0:00:02 --:--:--  251k\n"
      ]
     }
    ],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -122,7 +122,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(85, 33)\n",
+      "(88, 33)\n",
       "(294, 35)\n"
      ]
     }
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -366,7 +366,7 @@
        "93ee443e-cb39-424a-9aa4-1d16af813418                NaN  "
       ]
      },
-     "execution_count": 176,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -587,7 +587,7 @@
        "bio.001                     X  "
       ]
      },
-     "execution_count": 177,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -620,7 +620,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -641,109 +641,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://api.resourcewatch.org/v1/dataset/93ee443e-cb39-424a-9aa4-1d16af813418/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/4458eb12-8572-45d1-bf07-d5a3ee097021/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/16df8ada-87cc-4907-adce-a98bc4e91856/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/3624554e-b240-4edb-9110-1f010642c3f3/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/ad790c87-fe9e-4405-891d-de7c2ddfda79/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/7d3465f8-5959-4531-aaf2-c9a8a03183b3/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/de452a4c-a55c-464d-9037-8c3e9fe48365/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/3c12072d-611b-413f-b314-4df0834523ab/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/33bed1fb-9261-41bf-8b50-127a4d0c80c5/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/a07f1bed-ca16-4fbf-b14b-d3a0344cab74/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/36803484-c413-49a9-abe2-2286ee99b624/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/050f4146-566c-4a6d-9aaa-b49ab66a3090/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/20c70a51-4ddf-4f6c-ad2c-1a6729b95fa4/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/20aead6e-fef9-41c7-92c8-ea00edcae077/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/5e156d22-7f84-4cd2-9724-c1a519a83e0a/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/f84b559f-1eb1-43f2-871f-93fea669bf93/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/0a59f415-ee0b-4d19-96f7-c7304c152e1b/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/5d269c36-6ccf-4620-838d-431f86c30f69/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/f94db446-be63-4fb9-a6ea-7cc918a0d338/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/6d3163f5-4e08-4830-84f1-2c5d76570a82/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/6b670396-c52c-430c-b5bb-20693da03b60/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/d38d0d5c-31b1-47f4-9d2e-d8fba4c7d083/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/35ce2b98-adbb-4873-b334-d7b1cc542de7/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/8f14a33e-5a61-47af-b26e-c1fc036932a5/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/9e7dc020-5a93-4df8-b81e-ee3e7bf32764/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/fa6443ff-eb95-4d0f-84d2-f0c91682efdf/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/3f35ccf5-a104-4edf-b1ca-4e0bd423615b/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/51159bdb-4904-4101-a88e-ca7bd4f67cb0/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/2e31a1f3-576b-46b4-84f0-3f0cc399f887/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/3973a9b5-4ee7-44a9-aaba-24e6a4f23358/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/c18a38cd-94ff-48cd-818f-6ffb05992abb/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/e0b94aef-4a3c-4fe3-8a58-7b713a4234a2/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/621a7e5e-20ca-4567-bf31-7c70dfd0b222/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/f96452ba-28c5-493d-882a-085f89c274e2/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/a119aac3-81c7-4f8f-adb6-cca5449e9b6d/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/bbfcf170-5c47-40b0-880d-b04648eba354/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/e94f0e2d-2b5f-41ed-967f-d97e54dd81ea/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/e63bb157-4b98-4ecb-81d6-c1b15e79895a/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/65c0e15b-dad0-4681-934e-91c0a378d2fb/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/80c31f61-6e12-47a0-865d-f33a48bfdebb/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/fd49c7ad-db12-4c1e-b74d-adef17160f50/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/46332f9b-30d6-4366-be24-582813256972/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/33a41780-fd0c-4989-90b8-2c76a127224c/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/2c092793-aa3a-4520-959c-ad48165dcae4/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/d639909f-bcf3-4875-b8c3-35f030b68ed3/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/223b936e-06b8-4970-abd9-4f123904d95d/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/2034a766-6e8a-416d-b8ab-9b7b3e3abb15/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/eea43b01-d254-4033-be5e-fe9d09e51bc7/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/10f38c78-fe64-4a4f-b6ac-62f3c9d0d1ef/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/4338471d-881a-475f-8bd9-60c4d48b8e12/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/c48f0582-164f-4faa-97a2-7ad2e3111d3d/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/b9ae853a-8e80-4c99-8bc8-30973b029710/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/ec8359f3-4b35-4212-9482-3e34c55a3ef5/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/ac750026-e66d-4403-b607-efcf01189d21/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/0087944f-871c-44bc-b4d9-cd5acfc27023/metadata\n",
-      "(\"Object of type 'Series' is not JSON serializable\",)\n",
-      "                                     Unique ID            Public Title\n",
-      "final_ids                                                             \n",
-      "0087944f-871c-44bc-b4d9-cd5acfc27023   for.001              Tree Cover\n",
-      "0087944f-871c-44bc-b4d9-cd5acfc27023   for.007  Annual Tree Cover Gain\n",
-      "0087944f-871c-44bc-b4d9-cd5acfc27023   for.008  Annual Tree Cover Loss\n",
-      "https://api.resourcewatch.org/v1/dataset/e8f5b4e8-454e-488d-8b4a-b60ad02bce36/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/e663eb09-04de-4f39-b871-35c6c2ed10b5/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/71b81fe0-23fc-4154-8601-ba987381594c/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/8ab2606d-1b1c-4b71-ab29-c6e0a687e9fd/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/20cc5eca-8c63-4c41-8e8e-134dcf1e6d76/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/0087944f-871c-44bc-b4d9-cd5acfc27023/metadata\n",
-      "(\"Object of type 'Series' is not JSON serializable\",)\n",
-      "                                     Unique ID            Public Title\n",
-      "final_ids                                                             \n",
-      "0087944f-871c-44bc-b4d9-cd5acfc27023   for.001              Tree Cover\n",
-      "0087944f-871c-44bc-b4d9-cd5acfc27023   for.007  Annual Tree Cover Gain\n",
-      "0087944f-871c-44bc-b4d9-cd5acfc27023   for.008  Annual Tree Cover Loss\n",
-      "https://api.resourcewatch.org/v1/dataset/0087944f-871c-44bc-b4d9-cd5acfc27023/metadata\n",
-      "(\"Object of type 'Series' is not JSON serializable\",)\n",
-      "                                     Unique ID            Public Title\n",
-      "final_ids                                                             \n",
-      "0087944f-871c-44bc-b4d9-cd5acfc27023   for.001              Tree Cover\n",
-      "0087944f-871c-44bc-b4d9-cd5acfc27023   for.007  Annual Tree Cover Gain\n",
-      "0087944f-871c-44bc-b4d9-cd5acfc27023   for.008  Annual Tree Cover Loss\n",
-      "https://api.resourcewatch.org/v1/dataset/c02da519-12f3-4c6a-86e7-648afac80b23/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/0b9f0100-ce5b-430f-ad8f-3363efa05481/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/9a74e4c4-33b5-46d8-90d0-ea0615b1620f/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/ab806854-3c33-4008-a38d-a2bc71a8fc2c/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/24f9654b-c542-4987-a6fc-7d5b6339e3c4/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/4c9190e9-205b-4ff8-83dd-ee08cd63a04c/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/426fa4e2-edee-4f54-93d1-af95d7f4aec8/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/995c82b4-6fd0-44de-b21c-20fdce9738d9/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/2b569ae2-9452-44f8-9c81-3c3afb6c3c25/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/9e9a5c50-b825-4f12-838f-1650943c2be1/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/3ac5a895-b8ab-4480-b7eb-0fbb452ea76f/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/bab30f88-eb92-4aac-ba6d-fb7c61f4b7d3/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/54ec83fd-8398-4d46-b552-f2b945141084/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/0be2ce12-79b3-434b-b557-d6ea92d787fe/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/8671f536-1979-4b6f-a147-70152fcb44ed/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/47ec25f3-b594-4c73-97bb-1a915f824c71/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/5903f1d7-2240-4591-b970-33b32fe3be54/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/1b97e47e-ca18-4e50-9aae-a2853acca3f0/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/ede84747-0116-45c2-accb-1dfe141c00ff/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/01ddff59-8cbc-4420-8c0d-9d8317a63292/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/c9eadefd-4a06-4f3b-a2eb-3e3f45624c24/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/c8d3a605-3d50-46cf-a707-2aacbf6f7cb0/metadata\n",
-      "https://api.resourcewatch.org/v1/dataset/7a213f00-5be7-4f11-a859-3b9058dae2e6/metadata\n"
+      "https://api.resourcewatch.org/v1/dataset/4458eb12-8572-45d1-bf07-d5a3ee097021/metadata\n"
      ]
     }
    ],
@@ -754,13 +652,13 @@
     "def clean_nulls(val):\n",
     "    try:\n",
     "        if np.isnan(val):\n",
-    "            return(\"null\")\n",
+    "            return(None)\n",
     "        else:\n",
     "            return(val)\n",
     "    except:\n",
     "        return(val)\n",
     "\n",
-    "for rw_id in current_mdata.index:\n",
+    "for rw_id in [current_mdata.index[1]]:\n",
     "    url = \"https://api.resourcewatch.org/v1/dataset/\"+str(rw_id)+\"/metadata\"\n",
     "    print(url)\n",
     "    #url= 'https://api.resourcewatch.org/v1/dataset/9e9a5c50-b825-4f12-838f-1650943c2be1/metadata'\n",
