switch raw data processing for CDIAC play from on my computer to s3

--- a/Metadata Management/Upload Metadata to API.ipynb
+++ b/Metadata Management/Upload Metadata to API.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -33,13 +33,13 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 92735    0 92735    0     0  34153      0 --:--:--  0:00:02 --:--:-- 34232\n",
+      "100 92735    0 92735    0     0   100k      0 --:--:-- --:--:-- --:--:--  100k\n",
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100  563k    0  563k    0     0   168k      0 --:--:--  0:00:03 --:--:--  168k\n",
+      "100  563k    0  563k    0     0  2168k      0 --:--:-- --:--:-- --:--:-- 2175k\n",
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100  156k    0  156k    0     0   310k      0 --:--:-- --:--:-- --:--:--  310k\n"
+      "100  156k    0  156k    0     0  37412      0 --:--:--  0:00:04 --:--:-- 37416\n"
      ]
     }
    ],
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -814,8 +814,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://api.resourcewatch.org/v1/dataset/cefd2836-3cc1-43dc-a9d1-bfecf79a6252/metadata\n",
-      "ene.015\n",
+      "https://api.resourcewatch.org/v1/dataset/60be01b0-99fb-459c-8a08-b934270f8c4b/metadata\n",
+      "wat.004\n",
+      "<Response [400]>\n",
+      "<Response [200]>\n",
+      "https://api.resourcewatch.org/v1/dataset/b8307c16-fd77-4e35-9b68-8726a025f401/metadata\n",
+      "wat.008\n",
+      "<Response [400]>\n",
       "<Response [200]>\n"
      ]
     }
@@ -855,7 +860,7 @@
     "\n",
     "### THIS ADDS ALL DATASETS FOR WHICH WE HAVE METADATA in METADATA FOR UPLOAD ###\n",
     "\n",
-    "small_batch = [\"cefd2836-3cc1-43dc-a9d1-bfecf79a6252\"]\n",
+    "small_batch = [\"60be01b0-99fb-459c-8a08-b934270f8c4b\", \"b8307c16-fd77-4e35-9b68-8726a025f401\"]\n",
     "\n",
     "#datasets_for_pushing = [matched_mdata, matched_mdata_fake]\n",
     "datasets_for_pushing = [matched_mdata]\n",
