add string manipulation section

--- a/Data Access Assistance/Python Pandas Tutorial.ipynb
+++ b/Data Access Assistance/Python Pandas Tutorial.ipynb
@@ -41,6 +41,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Learn how to manipulate strings\n",
+    "\n",
+    "var = \"a new string\"\n",
+    "\n",
+    "String indexing: var[0], var[1], var[5]\n",
+    "\n",
+    "String slicing: var[0:1], var[0:2], var[0:3], var[1:3], var[4:], var[:6], var[:-2]\n",
+    "\n",
+    "String formating: var2 = \"a new {}\".format(\"statement\")\n",
+    "\n",
+    "Searching for substrings: \n",
+    "* var3 = \"something to search\"\n",
+    "* \"thing\" in var3\n",
+    "* \"some\" in var3\n",
+    "* \"Some\" in var3\n",
+    "* \"SOME\".lower() in var3\n",
+    "\n",
+    "String casting: \n",
+    "* var4 = \"big building\"\n",
+    "* type(var4)\n",
+    "* type(var4) == str\n",
+    "\n",
+    "* var5 = 10\n",
+    "* type(var5)\n",
+    "* var5 = float(var5)\n",
+    "* type(var5)\n",
+    "* var5 = str(var5)\n",
+    "* type(var5)\n",
+    "\n",
+    "Resource Watch Example, setting up new file names: https://github.com/nsuberi/ResourceWatchCode/blob/master/Raster%20Dataset%20Processing/Raster%20Prep%20Notebooks/cli.005.1%20%26%20cli.005.2%20done.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Practice here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Learn how to use pd.DataFrame.apply() to apply a function to rows or columns of a DataFrame\n",
     "\n",
     "Documentation: https://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.apply.html\n",
@@ -49,7 +96,7 @@
     "\n",
     "Using lambda functions in apply: https://stackoverflow.com/questions/36362888/python-use-a-function-in-pandas-lambda-expression\n",
     "\n",
-    "Resource Watch Example: "
+    "Resource Watch Example: https://github.com/nsuberi/ResourceWatchCode/blob/master/Raster%20Dataset%20Processing/Raster%20Prep%20Notebooks/cit.018_calculate_running_average-later_done.ipynb"
    ]
   },
   {
