add pandas head, tail, read_csv documentation

--- a/Data Access Assistance/Python Pandas Tutorial.ipynb
+++ b/Data Access Assistance/Python Pandas Tutorial.ipynb
@@ -22,7 +22,14 @@
     "\n",
     "Cookbook, lots of examples: https://pandas.pydata.org/pandas-docs/stable/cookbook.html#cookbook-pivot\n",
     "\n",
-    "Resource Watch example:\n",
+    "Using pd.read_csv() to create a DataFrame from a csv: https://pandas.pydata.org/pandas-docs/stable/generated/pandas.read_csv.html\n",
+    "\n",
+    "Using DataFrame.head() and DataFrame.tail() to explore top and bottom of datasets:\n",
+    "* https://pandas.pydata.org/pandas-docs/version/0.18.1/generated/pandas.DataFrame.head.html\n",
+    "* https://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.tail.html\n",
+    "* http://pandathings.com/learn-about-the-giant-panda/do-pandas-have-tails/\n",
+    "\n",
+    "Resource Watch example, preparing data for the GDP-GHG Divergence project: https://github.com/nsuberi/ResourceWatchCode/blob/master/Notebooks%20for%20Exploring%20Specific%20Datasets/CDIAC%20Play.ipynb\n",
     "    "
    ]
   },
@@ -43,13 +50,23 @@
    "source": [
     "Learn how to manipulate strings\n",
     "\n",
-    "var = \"a new string\"\n",
+    "String indexing: \n",
+    "* var = \"a new string\"\n",
+    "* var[0]\n",
+    "* var[1]\n",
+    "* var[5]\n",
     "\n",
-    "String indexing: var[0], var[1], var[5]\n",
+    "String slicing: \n",
+    "* var[0:1]\n",
+    "* var[0:2]\n",
+    "* var[0:3]\n",
+    "* var[1:3]\n",
+    "* var[4:]\n",
+    "* var[:6]\n",
+    "* var[:-2]\n",
     "\n",
-    "String slicing: var[0:1], var[0:2], var[0:3], var[1:3], var[4:], var[:6], var[:-2]\n",
-    "\n",
-    "String formating: var2 = \"a new {}\".format(\"statement\")\n",
+    "String formating: \n",
+    "* var2 = \"a new {}\".format(\"statement\")\n",
     "\n",
     "Searching for substrings: \n",
     "* var3 = \"something to search\"\n",
