Demo syncing smoke data with Carto

--- a/Metadata Management/Upload Metadata to API.ipynb
+++ b/Metadata Management/Upload Metadata to API.ipynb
@@ -830,7 +830,7 @@
     "from configparser import ConfigParser\n",
     "config = ConfigParser()\n",
     "config.read(\"../.env\")\n",
-    "api_token = config.get(\"auth\", \"api_token\")\n",
+    "api_token = config.get(\"auth\", \"rw_api_token\")\n",
     "\n",
     "auth_token = api_token # <Insert Auth Token Here>\n",
     "\n",
