rename file to specifically be smoke data for the US

--- a/Near Real Time data procedures/Smoke Data for US.ipynb
+++ b/Near Real Time data procedures/Smoke Data for US.ipynb
@@ -74,21 +74,6 @@
    },
    "outputs": [],
    "source": [
-    "# Sample read from Carto\n",
-    "table_name = \"com_005_cruise_ports\"\n",
-    "table_read_url = \"https://wri-rw.carto.com/api/v2/sql?q=SELECT * FROM {}&api_key={}\".format(table_name, carto_api_token)\n",
-    "res = req.get(table_read_url)\n",
-    "#print(res.text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
     "# View smoke data files available on ftp\n",
     "file = obj_req.urlopen(remote_path).read().splitlines()\n",
     "file"
@@ -168,7 +153,7 @@
     }
    ],
    "source": [
-    "# Upload smoke data to S3\n",
+    "# Prepare data, upload to S3\n",
     "\n",
     "# Zip file: https://stackoverflow.com/questions/1855095/how-to-create-a-zip-archive-of-a-directory\n",
     "os.chdir(smoke_folder)\n",
@@ -191,15 +176,6 @@
     "        except Exception as e:\n",
     "            print(e)    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -263,15 +239,6 @@
     "             headers=headers)\n",
     "print(res.text)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
