begin experimenting creating base rasters using numpy & netcdf4

--- a/Near Real Time data procedures/Geocoding for Carto.ipynb
+++ b/Near Real Time data procedures/Geocoding for Carto.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -29,13 +29,6 @@
     "# URL interactions\n",
     "import requests as req\n",
     "\n",
-    "# Libraries for downloading data from FTP\n",
-    "import shutil\n",
-    "import urllib.request as obj_req\n",
-    "from contextlib import closing\n",
-    "\n",
-    "remote_path = \"ftp://satepsanone.nesdis.noaa.gov/FIRE/HMS/GIS/\"\n",
-    "\n",
     "# data upload\n",
     "import boto3\n",
     "import sys\n",
@@ -45,9 +38,6 @@
     "s3_download = boto3.resource(\"s3\")\n",
     "s3_bucket = \"wri-public-data\"\n",
     "s3_folder = \"resourcewatch/\"\n",
-    "\n",
-    "zipped_smoke = \"yesterday_smoke_shapefile\"\n",
-    "zipped_fire = \"yesterday_fire_shapefile\"\n",
     "\n",
     "class ProgressPercentage(object):\n",
     "        def __init__(self, filename):\n",
@@ -70,137 +60,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# View smoke data files available on ftp\n",
-    "file = obj_req.urlopen(remote_path).read().splitlines()\n",
-    "file"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/nathansuberi/Desktop/RW_Data/Smoke/yesterday_smoke/hms_smoke20171019.prelim.shp\n",
-      "/Users/nathansuberi/Desktop/RW_Data/Smoke/yesterday_smoke/hms_smoke20171019.prelim.shx\n",
-      "/Users/nathansuberi/Desktop/RW_Data/Smoke/yesterday_smoke/hms_smoke20171019.prelim.dbf\n",
-      "/Users/nathansuberi/Desktop/RW_Data/Smoke/yesterday_fire/hms_fire20171019.prelim.shp\n",
-      "/Users/nathansuberi/Desktop/RW_Data/Smoke/yesterday_fire/hms_fire20171019.prelim.shx\n",
-      "/Users/nathansuberi/Desktop/RW_Data/Smoke/yesterday_fire/hms_fire20171019.prelim.dbf\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Download most recent smoke data - or past 4 days?\n",
-    "# If want to include a history, need to do reformatting if \n",
-    "# 4 day interval extends across 2 months\n",
-    "\n",
-    "def format_month(mon):\n",
-    "    if mon < 10:\n",
-    "        return(\"0\" + str(mon))\n",
-    "    else:\n",
-    "        return(str(mon))\n",
-    "\n",
-    "now = datetime.now()\n",
-    "year = str(now.year)\n",
-    "month = format_month(now.month)\n",
-    "today = str(now.day)\n",
-    "yesterday = str(now.day-1)\n",
-    "\n",
-    "def create_most_recent_file(file_type, year, month, day):\n",
-    "    files = [\n",
-    "        \"hms_{}{}{}{}.prelim.shp\".format(file_type, year, month, day),\n",
-    "        \"hms_{}{}{}{}.prelim.shx\".format(file_type, year, month, day),\n",
-    "        \"hms_{}{}{}{}.prelim.dbf\".format(file_type, year, month, day)\n",
-    "    ]\n",
-    "    return(files)\n",
-    "\n",
-    "# recent_files = create_most_recent_file(year, month, today)\n",
-    "recent_smoke_files = create_most_recent_file(\"smoke\", year, month, yesterday)\n",
-    "recent_fire_files = create_most_recent_file(\"fire\", year, month, yesterday)\n",
-    "\n",
-    "\n",
-    "smoke_folder = \"/Users/nathansuberi/Desktop/RW_Data/Smoke/\"\n",
-    "yesterday_smoke_folder = \"/Users/nathansuberi/Desktop/RW_Data/Smoke/yesterday_smoke/\"\n",
-    "yesterday_fire_folder = \"/Users/nathansuberi/Desktop/RW_Data/Smoke/yesterday_fire/\"\n",
-    "\n",
-    "for file in recent_smoke_files:\n",
-    "    ftp_loc = remote_path+file\n",
-    "    \n",
-    "    local_smoke = yesterday_smoke_folder + file\n",
-    "    print(local_smoke)\n",
-    "    with closing(obj_req.urlopen(ftp_loc)) as r:\n",
-    "        with open(local_smoke, 'wb') as f:\n",
-    "            shutil.copyfileobj(r, f)\n",
-    "\n",
-    "for file in recent_fire_files:\n",
-    "    ftp_loc = remote_path+file\n",
-    "    local_fire = yesterday_fire_folder + file        \n",
-    "    print(local_fire)\n",
-    "    with closing(obj_req.urlopen(ftp_loc)) as r:\n",
-    "        with open(local_fire, 'wb') as f:\n",
-    "            shutil.copyfileobj(r, f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "yesterday_fire_shapefile.zip  84017 / 84017.0  (100.00%))"
-     ]
-    }
-   ],
-   "source": [
-    "# Prepare data, upload to S3\n",
-    "\n",
-    "# Zip file: https://stackoverflow.com/questions/1855095/how-to-create-a-zip-archive-of-a-directory\n",
-    "os.chdir(smoke_folder)\n",
-    "shutil.make_archive(zipped_smoke, 'zip', yesterday_smoke_folder)\n",
-    "shutil.make_archive(zipped_fire, 'zip', yesterday_fire_folder)\n",
-    "\n",
-    "# Upload to S3\n",
-    "s3_upload.upload_file(zipped_smoke + \".zip\", s3_bucket, s3_folder + zipped_smoke + \".zip\",\n",
-    "                         Callback=ProgressPercentage(zipped_smoke + \".zip\"))\n",
-    "s3_upload.upload_file(zipped_fire + \".zip\", s3_bucket, s3_folder + zipped_fire + \".zip\",\n",
-    "                         Callback=ProgressPercentage(zipped_fire + \".zip\"))\n",
-    "\n",
-    "# Deleteoriginal files and zipped files from local\n",
-    "\n",
-    "# Unlink is the same as os.remove\n",
-    "for folder in [yesterday_smoke_folder, yesterday_fire_folder, smoke_folder]:\n",
-    "    for file in os.listdir(folder):\n",
-    "        file_path = os.path.join(folder, file)\n",
-    "        try:\n",
-    "            if os.path.isfile(file_path):\n",
-    "                os.unlink(file_path)\n",
-    "            #elif os.path.isdir(file_path): shutil.rmtree(file_path)\n",
-    "        except Exception as e:\n",
-    "            print(e)    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
     {
@@ -346,9 +208,6 @@
     }
    ],
    "source": [
-    "# Check out which syncs are available, find the one that matches these datasets\n",
-    "# Fill in import_below to force the sync\n",
-    "\n",
     "res = req.get(\"https://wri-rw.carto.com/api/v1/synchronizations/?api_key={}\".format(carto_api_token))\n",
     "sync_jobs = res.json()\n",
     "for pos, job in enumerate(sync_jobs[\"synchronizations\"]):\n",
@@ -359,89 +218,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# Force sync, will only go through if last sync was more than 15 minutes ago\n",
-    "import_id = \"<insert id here>\"\n",
-    "headers = {\n",
-    "    \"content-length\":\"0\"\n",
-    "}\n",
-    "res = req.put(\"https://wri-rw.carto.com/api/v1/synchronizations/{}/sync_now?api_key={}\".format(import_id, carto_api_token),\n",
-    "             headers=headers)\n",
-    "print(res.text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "### LEGACY, only need to do this once per dataset. \n",
-    "# After uploading new data, update by running the force sync script above"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "smoke: {\"data_import\":{\"endpoint\":\"/api/v1/imports\",\"item_queue_id\":\"c01aa8fb-f4a6-4aa1-af69-718ad2c1d8a3\"},\"id\":\"23d4afc8-b5aa-11e7-9a39-0e831088b0bc\",\"name\":null,\"interval\":86400,\"url\":\"https://wri-public-data.s3.amazonaws.com/resourcewatch/yesterday_smoke_shapefile.zip\",\"state\":\"created\",\"user_id\":\"c73d7d4a-5ff5-4d7c-bfb8-53dd1a6ce8f9\",\"created_at\":\"2017-10-20T15:20:00+00:00\",\"updated_at\":\"2017-10-20T15:20:00+00:00\",\"run_at\":\"2017-10-21T15:20:00+00:00\",\"ran_at\":\"2017-10-20T15:20:00+00:00\",\"modified_at\":null,\"etag\":null,\"checksum\":\"\",\"log_id\":null,\"error_code\":null,\"error_message\":null,\"retried_times\":0,\"service_name\":null,\"service_item_id\":null,\"type_guessing\":true,\"quoted_fields_guessing\":true,\"content_guessing\":false,\"visualization_id\":null,\"from_external_source\":false}\n",
-      "fire: {\"data_import\":{\"endpoint\":\"/api/v1/imports\",\"item_queue_id\":\"657efeb0-57a8-4ad3-bfd1-02cba4296e8a\"},\"id\":\"23e4af68-b5aa-11e7-97e7-0e7f7e78c96c\",\"name\":null,\"interval\":86400,\"url\":\"https://wri-public-data.s3.amazonaws.com/resourcewatch/yesterday_fire_shapefile.zip\",\"state\":\"created\",\"user_id\":\"c73d7d4a-5ff5-4d7c-bfb8-53dd1a6ce8f9\",\"created_at\":\"2017-10-20T15:20:00+00:00\",\"updated_at\":\"2017-10-20T15:20:00+00:00\",\"run_at\":\"2017-10-21T15:20:00+00:00\",\"ran_at\":\"2017-10-20T15:20:00+00:00\",\"modified_at\":null,\"etag\":null,\"checksum\":\"\",\"log_id\":null,\"error_code\":null,\"error_message\":null,\"retried_times\":0,\"service_name\":null,\"service_item_id\":null,\"type_guessing\":true,\"quoted_fields_guessing\":true,\"content_guessing\":false,\"visualization_id\":null,\"from_external_source\":false}\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'https://dwh.hcss.nl/df_map_2ylag.csv'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Sync carto table with S3 url\n",
-    "# ONLY NEED TO RUN THIS ONCE\n",
-    "\n",
-    "smoke_data_url = \"https://wri-public-data.s3.amazonaws.com/resourcewatch/\" + zipped_smoke + \".zip\"\n",
-    "fire_data_url = \"https://wri-public-data.s3.amazonaws.com/resourcewatch/\" + zipped_fire + \".zip\"\n",
-    "\n",
-    "# 3600 = sync every hour\n",
-    "# 3600 * 24 = sync every day\n",
-    "interval = str(3600*24)\n",
-    "\n",
-    "smoke_payload = {\n",
-    "    \"url\":smoke_data_url,\n",
-    "    \"interval\":interval\n",
-    "}\n",
-    "fire_payload = {\n",
-    "    \"url\":fire_data_url,\n",
-    "    \"interval\":interval\n",
-    "}\n",
-    "\n",
-    "sync_url = \"https://wri-rw.carto.com/api/v1/synchronizations/?api_key={}\".format(carto_api_token)\n",
-    "headers = {\n",
-    "    'content-type': \"application/json\"\n",
-    "}\n",
-    "\n",
-    "smoke_res = req.request(\"POST\", sync_url, data=json.dumps(smoke_payload), headers = headers)\n",
-    "print(\"smoke:\", smoke_res.text)\n",
-    "\n",
-    "fire_res = req.request(\"POST\", sync_url, data=json.dumps(fire_payload), headers = headers)\n",
-    "print(\"fire:\", fire_res.text)"
+    "# Option 1: Fix names here\n",
+    "## Import data\n",
+    "## Change names\n",
+    "## Push to S3\n",
+    "## Force sync with Carto\n",
+    "\"https://dwh.hcss.nl/df_map_2ylag.csv\"\n",
+    "# Option 2: Keep upload as it is\n",
+    "## Provide another table in Carto that has the geometries \n",
+    "# and columns to merge the country names"
    ]
   }
  ],
