python implementation of world food programme ALPS algorithm... big residuals in the 17000 range may be due to large commodity prices... such as fuel being measured 150000 AFN and fluctuating down to 94000 AFN... still need to visually check everything to make sure algorithm was successful

--- a/Notebooks for Exploring Specific Datasets/World Food Programme Data.ipynb
+++ b/Notebooks for Exploring Specific Datasets/World Food Programme Data.ipynb
@@ -185,15 +185,14 @@
     "import pandas as pd\n",
     "\n",
     "# Don't forget encoding or it'll break\n",
-    "wfp_food_price_data = pd.read_csv(\"/var/folders/wr/1t2wpnfd2sjbvgr17rwh76d00000gn/T/WFPVAM_FoodPrices_24-7-2017.csv\",\n",
-    "                                 encoding = \"ISO-8859-1\")"
+    "wfp_food_price_data = pd.read_csv(path, encoding = \"ISO-8859-1\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
     {
@@ -1725,6 +1724,47 @@
    "source": [
     "wfp_food_price_data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Translate R code over, calculate the Alerts for Price Spikes\n",
+    "\n",
+    "# need to subset by month\n",
+    "# then run linear regression\n",
+    "# run twelve of these\n",
+    "\n",
+    "# For each market\n",
+    "    # For each product\n",
+    "        # For each month\n",
+    "            # Regress Time and price - y = mx + b\n",
+    "                # Use b value plus time factor\n",
+    "\n",
+    "# "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
